test/compile-fail/resolution/pub/in-self/expected.txt
error[E0742]: `self` is not an ancestor of this scope
  ┌─ ./test/compile-fail/resolution/pub/in-self/top.rhdl:1:8
  │
1 │ pub(in self::b) struct a {}
  │        ^^^^
  │
  = visibility can only be restricted to an ancestral path

